--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <header>
             <nav>
                 <ul>
-                    <li>English</li>
-                    <li>Espa&ntilde;ol</li>
+                    <li><a href="/">English</a></li>
                 </ul>
             </nav>
             <div class="logo"></div>
@@ -35,5 +34,13 @@
                 </li>
             </ul>
         </div>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="https://github.com/pyschool">Contribute</a></li>
+                    <li><a href="https://github.com/pyschool/organization">Organize</a></li>
+                </ul>
+            </nav>
+        </footer>
     </body>
 </html>
