Add spanish version.

--- a/index.es.html
+++ b/index.es.html
@@ -19,35 +19,35 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">[English]</a></li>
-                    <li><a href="index.es.html">Spanish</a></li>
+                    <li><a href="index.html">Ingles</a></li>
+                    <li><a href="es.html">[Español]</a></li>
                 </ul>
             </nav>
             <div class="logo"></div>
             <h1>PySchool</h1>
-            <p>Stories to learn Python stuff.</p>
-            <small>Inspired in NodeSchool</small>
+            <p>Talleres para aprender Python.</p>
+            <small>Inspirado en NodeSchool</small>
         </header>
         <div class="workshops">
             <ul>
                 <li>
-                    <a href="https://github.com/pyschool/hipyschool">Hi Python</a>
+                    <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>Sample story (fork or copy to create your own story).</p>
+                    <p>Taller de muestra (forkear o copiar para crear uno propio).</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
-                    <p>Learn Django [work in progress].</p>
                     <code>pip install unchaindjango</code>
+                    <p>Aprende Django [alpha].</p>
                 </li>
             </ul>
         </div>
         <footer>
             <nav>
                 <ul>
-                    <li><a href="https://github.com/pyschool">Contribute</a></li>
+                    <li><a href="https://github.com/pyschool">Contribuye</a></li>
                     <li><a href="https://twitter.com/py_school">@py_school</a></li>
-                    <li><a href="https://github.com/pyschool/organization">Organize</a></li>
+                    <li><a href="https://github.com/pyschool/organization">Organiza</a></li>
                 </ul>
             </nav>
         </footer>
