--- a/index.es.html
+++ b/index.es.html
@@ -38,7 +38,7 @@
                 <li>
                     <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
                     <code>pip install unchaindjango</code>
-                    <p>Aprende Django [alpha].</p>
+                    <p>Aprende Django [trabajo en progreso].</p>
                 </li>
             </ul>
         </div>
