Small idiom fix.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="logo"></div>
             <h1>PySchool</h1>
             <p>Stories to learn Python stuff.</p>
-            <small>Inspired in NodeSchool</small>
+            <small>Inspired by NodeSchool</small>
         </header>
         <div class="workshops">
             <ul>
