Fix twitter handle.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <nav>
                 <ul>
                     <li><a href="https://github.com/pyschool">Contribute</a></li>
-                    <li><a href="https://twitter.com/py_school">@py_school</a></li>
+                    <li><a href="https://twitter.com/py_school">@pyschool</a></li>
                     <li><a href="https://github.com/pyschool/organization">Organize</a></li>
                 </ul>
             </nav>
