Fix twitter handle.

--- a/index.es.html
+++ b/index.es.html
@@ -46,7 +46,7 @@
             <nav>
                 <ul>
                     <li><a href="https://github.com/pyschool">Contribuye</a></li>
-                    <li><a href="https://twitter.com/py_school">@py_school</a></li>
+                    <li><a href="https://twitter.com/pyschool">@pyschool</a></li>
                     <li><a href="https://github.com/pyschool/organization">Organiza</a></li>
                 </ul>
             </nav>
