--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                     <p>Sample story (fork or copy to create your own story).</p>
                 </li>
                 <li>
+                    <a href="https://github.com/sophilabs/learnregex">Learn Regex</a>
+                    <p>A pyschool story for learning regular expressions.</p>
+                    <code>pip install learnregex</code>
+                </li>
+                <li>
                     <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
                     <p>Learn Django [work in progress].</p>
                     <code>pip install unchaindjango</code>
