Add py101 reference and fix some issues in the pyschool page

--- a/index.es.html
+++ b/index.es.html
@@ -20,13 +20,15 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Ingles</a></li>
-                    <li><a href="es.html">[Español]</a></li>
+                    <li><a href="index.es.html">[Español]</a></li>
                 </ul>
             </nav>
             <div class="logo"></div>
             <h1>PySchool</h1>
             <p>Talleres para aprender Python.</p>
-            <small>Inspirado en NodeSchool</small>
+            <small>Inspirado en
+              <a href="https://nodeschool.io/es/">NodeSchool</a>
+            </small>
         </header>
         <div class="workshops">
             <ul>
@@ -36,7 +38,21 @@
                     <p>Taller de muestra (forkear o copiar para crear uno propio).</p>
                 </li>
                 <li>
-                    <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
+                    <a href="https://github.com/sophilabs/py101">Python 101</a>
+                    <code>pip install py1010</code>
+                    <p>Una historia de Pyschool para aprender los conceptos
+                      esenciales de Python.</p>
+                </li>
+                <li>
+                    <a href="https://github.com/sophilabs/learnregex">Learn Regex</a>
+                    <code>pip install learnregex</code>
+                    <p>Taller para aprender expresiones regulares usando la línea de comando.
+                    Disponible en Inglés solamente</p>
+                </li>
+                <li>
+                    <a href="https://github.com/sophilabs/unchaindjango">
+                      Unchain Django
+                    </a>
                     <code>pip install unchaindjango</code>
                     <p>Aprende Django [trabajo en progreso].</p>
                 </li>
