--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
             <div class="logo"></div>
             <h1>PySchool</h1>
             <p>Stories to learn Python stuff.</p>
-            <small>Inspired by NodeSchool</small>
+            <small>Inspired by <a href="https://nodeschool.io/">NodeSchool</a></small>
         </header>
         <div class="workshops">
             <ul>
                 <li>
-                    <a href="https://github.com/pyschool/hipyschool">Hi Python</a>
+                    <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
                     <p>Sample story (fork or copy to create your own story).</p>
                 </li>
                 <li>
+                    <a href="https://github.com/sophilabs/py101">Python 101</a>
+                    <code>pip install py1010</code>
+                    <p>A Pyschool story for learning python essentials.</p>
+                </li>
+                <li>
                     <a href="https://github.com/sophilabs/learnregex">Learn Regex</a>
-                    <p>A pyschool story for learning regular expressions.</p>
                     <code>pip install learnregex</code>
+                    <p>Workshop for learning regular expressions using the commandline.</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
