--- a/index.html
+++ b/index.html
@@ -26,14 +26,16 @@
             <div class="logo"></div>
             <h1>PySchool</h1>
             <p>Stories to learn Python stuff.</p>
-            <small>Inspired by <a href="https://nodeschool.io/">NodeSchool</a></small>
+            <small>
+              Inspired by <a href="https://nodeschool.io/">NodeSchool</a>
+            </small>
         </header>
         <div class="workshops">
             <ul>
                 <li>
                     <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>Sample story (fork or copy to create your own story).</p>
+                    <p>Sample story (fork or copy to create your own story).'</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/py101">Python 101</a>
