--- a/index.es.html
+++ b/index.es.html
@@ -19,15 +19,15 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="index.html">Ingles</a></li>
-                    <li><a href="index.es.html">[Español]</a></li>
+                    <li><a href="index.html">[Inglés]</a></li>
+                    <li><a href="index.es.html">Español</a></li>
                 </ul>
             </nav>
             <div class="logo"></div>
             <h1>PySchool</h1>
             <p>Talleres para aprender Python.</p>
-            <small>Inspirado en
-              <a href="https://nodeschool.io/es/">NodeSchool</a>
+            <small>
+              Inspirado por <a href="https://nodeschool.io/">NodeSchool</a>
             </small>
         </header>
         <div class="workshops">
@@ -35,26 +35,22 @@
                 <li>
                     <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>Taller de muestra (forkear o copiar para crear uno propio).</p>
+                    <p>Taller de muestra (forkear o copiar para crear uno propio).'</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/py101">Python 101</a>
                     <code>pip install py1010</code>
-                    <p>Una historia de Pyschool para aprender los conceptos
-                      esenciales de Python.</p>
+                    <p>Una historia de Pyschool para aprender los conceptos esenciales de Python.</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/learnregex">Learn Regex</a>
                     <code>pip install learnregex</code>
-                    <p>Taller para aprender expresiones regulares usando la línea de comando.
-                    Disponible en Inglés solamente</p>
+                    <p>Taller para aprender expresiones regulares usando la línea de comando. Disponible en Inglés solamente</p>
                 </li>
                 <li>
-                    <a href="https://github.com/sophilabs/unchaindjango">
-                      Unchain Django
-                    </a>
-                    <code>pip install unchaindjango</code>
+                    <a href="https://github.com/sophilabs/unchaindjango">Unchain Django</a>
                     <p>Aprende Django [trabajo en progreso].</p>
+                    <code>pip install unchaindjango</code>
                 </li>
             </ul>
         </div>
