--- a/index.es.html
+++ b/index.es.html
@@ -35,7 +35,7 @@
                 <li>
                     <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>Taller de muestra (forkear o copiar para crear uno propio).'</p>
+                    <p>Taller de muestra (forkear o copiar para crear uno propio).</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/py101">Python 101</a>
