--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li>
                     <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
                     <code>pip install hipyschool</code>
-                    <p>Sample story (fork or copy to create your own story).'</p>
+                    <p>Sample story (fork or copy to create your own story).</p>
                 </li>
                 <li>
                     <a href="https://github.com/sophilabs/py101">Python 101</a>
