Add Contribute section, pictures, et al

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
 
         <section class="contribute">
           <h2>Contribute</h2>
+
+          <div class="contribute-logo"></div>
           <p><em>“The only way to learn a new programming language is by writing programs in it.”</em></p>
           <p>― <a href="https://wikipedia.org/wiki/Dennis_Ritchie">Dennis Ritchie</a></p>
           <p>Pyschool could always use more stories, whether as specific python features, existing libraries, programming concepts, or even programming concepts not specific to Python itself like event handling, threading and such. New stories
@@ -123,6 +125,20 @@ $ git push origin</pre>
           	<li><a href="https://twitter.com/pyschool"> Let us know</a> or submit a pull request to the Pyschool GitHub website to update our website to include your story.</li>
           </ol>
         </section>
+
+       <section class="organize">
+         <h2>Organize</h2>
+
+         <div class="organize-logo"></div>
+
+         <p><em>“Education is for improving the lives of others and for leaving your community and world better than you found it”</em></p>
+         <p>― <a href="https://wikipedia.org/wiki/Marian_Wright_Edelman">Marian Wright Edelman</a></p>
+
+         <p>PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There's a lot of flexibility in the specifics of running a NodeSchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.</p>
+
+         <p>To ask and answer questions about authoring Pyschool content, check out our <a href="https://owu.slack.com/">Pyschool</a> discussion group. Don't hesitate to send us an <a href="mailto:pyschool@sophilabs.com">email</a> if you can't find the answer you're looking for.
+        </p>
+       </section>
 
         <footer>
             <nav>
