--- a/index.es.html
+++ b/index.es.html
@@ -51,7 +51,10 @@
         </section>
 
         <section class="contribute">
+          <div class="contribute-logo"></div>
+
           <h2>Contribuye</h2>
+
           <p><em>“La única forma de aprender un nuevo lenguaje de programación esescribiendo programas en él.”</em></p>
           <p>― <a href="https://wikipedia.org/wiki/Dennis_Ritchie">Dennis Ritchie</a></p>
           <p>A Pyschool le vendría genial nuevos talleres, ya sea de temas específicos de Python, bibilotecas ya existentes, conceptos de progración, o aún otros conceptos que no son específicos de Python como manejo de eventos, hilos, por nombrar algunos. Nuevos talleres siempre son bienvenidos :)
@@ -122,6 +125,20 @@ $ git push origin</pre>
           	<li><a href="https://twitter.com/pyschool"> Háznos saber</a> or haz un pull request al sitio de Pyschool en GitHub.</li>
           </ol>
         </section>
+
+       <section class="organize">
+         <h2>Organiza</h2>
+
+         <div class="organize-logo"></div>
+
+         <p><em>“Education is for improving the lives of others and for leaving your community and world better than you found it”</em></p>
+         <p>― <a href="https://wikipedia.org/wiki/Marian_Wright_Edelman">Marian Wright Edelman</a></p>
+
+         <p>PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There's a lot of flexibility in the specifics of running a NodeSchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.</p>
+
+         <p>To ask and answer questions about authoring Pyschool content, check out our <a href="https://owu.slack.com/">Pyschool</a> discussion group. Don't hesitate to send us an <a href="mailto:pyschool@sophilabs.com">email</a> if you can't find the answer you're looking for.
+        </p>
+       </section>
 
         <footer>
             <nav>
