Add spanish translations

--- a/index.es.html
+++ b/index.es.html
@@ -131,12 +131,12 @@ $ git push origin</pre>
 
          <div class="organize-logo"></div>
 
-         <p><em>“Education is for improving the lives of others and for leaving your community and world better than you found it”</em></p>
+         <p><em>“La educación es para mejorar las vidas de otros y para dejar tu comunidad en un mejor estado de la que la encontraste”</em></p>
          <p>― <a href="https://wikipedia.org/wiki/Marian_Wright_Edelman">Marian Wright Edelman</a></p>
 
-         <p>PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There's a lot of flexibility in the specifics of running a NodeSchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.</p>
+         <p>Pyschool es un efuerzo totalmente llevado a cabo por la comunidad y es 100% open source. Esto quiere decir que cuaquier persona puede usar material de Pyschool, u organizar un evento. Esto da un montón de flexibilidad a la hora de ser anfritrión un evento de Pyschool. La único que se espera de los anfitriones es que los eventos no sean con fines de lucro, y que el modelo de membrecía para participar en ellos sea abierto.</p>
 
-         <p>To ask and answer questions about authoring Pyschool content, check out our <a href="https://owu.slack.com/">Pyschool</a> discussion group. Don't hesitate to send us an <a href="mailto:pyschool@sophilabs.com">email</a> if you can't find the answer you're looking for.
+         <p>Para preguntar y contestar preguntas acerca de la autoría de contenido para Pyschool, visita nuestro grupo de discusión de <a href="https://owu.slack.com/">Pyschool</a>. No dudes en mandar un <a href="mailto:pyschool@sophilabs.com">email</a> si no encuentras la respuesta para lo que buscas.
         </p>
        </section>
 
