--- a/index.es.html
+++ b/index.es.html
@@ -50,82 +50,6 @@
             </ul>
         </section>
 
-        <section class="contribute">
-          <div class="contribute-logo"></div>
-
-          <h2>Contribuye</h2>
-
-          <p><em>“La única forma de aprender un nuevo lenguaje de programación esescribiendo programas en él.”</em></p>
-          <p>― <a href="https://wikipedia.org/wiki/Dennis_Ritchie">Dennis Ritchie</a></p>
-          <p>A Pyschool le vendría genial nuevos talleres, ya sea de temas específicos de Python, bibilotecas ya existentes, conceptos de progración, o aún otros conceptos que no son específicos de Python como manejo de eventos, hilos, por nombrar algunos. Nuevos talleres siempre son bienvenidos :)
-          </p>
-
-          <a name="user-content-get-started"></a>
-          <h3>
-          	<a id="user-content-get-started" class="anchor" href="#get-started" aria-hidden="true">
-          	</a>
-          	¡Comienza!
-          </h3>
-          <p>¿Estás pronto para escribir tu taller? Aquí se muestra como configurar un ambiente local de desarrollo. Todos los talleres derivan de la biblioteca <a href="https://github.com/pyschool/story">Story</a>.
-          </p>
-          <ol>
-          	<li>Forkea, clona o copia los repositores de <a href="https://github.com/pyschool/hipyschool">hipyschool</a> o <a href="https://github.com/sophilabs/py101">py101</a>. Son dos buenos ejemplos de talleres para comenzar.
-          	</li>
-          	<li>
-          		<p>Enlaza tu copia local a un <code>virtualenv</code>. Asumiendo que tienes virtualenvwrapper instalaldo, puedes inicializar tu copia local para desarrollo de la siguiente manera:
-          		</p>
-          		<pre>$ mkvirtualenv my_python_story
-$ cd my_python_story/
-$ python setup.py develop</pre>
-          	</li>
-          	<li>Crea un módulo para tu clase <em>Story</em>. Por ejemplo <code>mystory/__init__.py</code>.
-          		Define los atributos <code>name</code>, <code>title</code> and <code>adventures</code>.
-          		Deberás usar la función <code>gettext()</code> del módulo <code>story.translation</code> para recibir traducciones. Más abajo se tratará con detenimiento.
-          	</li>
-          	<li>
-          		Crea una o más <em>Aventuras</em>. Un taller es una colección de una o más aventuras
-          		<ol>
-          			<li>Crea un módulo con tu aventura. Por ejemplo <code>mystory/myfirstadventure</code></li>
-          			<li>Crea el archivo <code>README.rst</code> conteniendo tu aventura</li>
-          			<li>Haz una traducción a español. Debes de llamarla <code>README.es.rst</code></li>
-          			<li>Define una clase llamada <code>Adventure</code> e
-          			</li>
-          		</ol>
-          	</li>
-          	<li>
-          		<p>Debido a que la función <code>gettext()</code> depende de  <a href="http://babel.pocoo.org/en/latest/">PyBabel</a>, por lo tanto debes inicializar las traducciones ejecutando:
-          		</p>
-          		<pre>$ make msg-init
-$ make msg-extract</pre>
-          		<p>Deberías ver varios archivos en la carpeta <code>mystory/locale/</code>, correspondientes a los usos de la función <code>gettext()</code>
-                Si el comando falla, intenta nuevamente.
-          		</p>
-          	</li>
-          	<li>
-          		<p>(Opcional) Modifica y agrega traducciones in los archivos de la carpeta <code>locale</code>, y luego ejecuta.</p>
-          		<pre>$ make msg</pre>
-          	</li>
-          	<li>
-          		<p>Es recomendado crear algunos test unitarios para verificar tus soluciones, verifica que tus cambios pasen flak8, tox, así como los tests unitarios:
-          		</p>
-          		<pre>$ flake8 my_python_story tests
-$ python setup.py test or py.test
-$ tox</pre>
-          		<p>Para obtener flake8 y tox, solo corre <code>pip install </code> en tu virtualenv.</p>
-          	</li>
-          	<li>
-          		<p>Comitea tus cambios y haz un push de tu branch a GitHub:</p>
-          		<pre>$ git add .
-$ git commit -m "Your detailed description of your changes."
-$ git push origin</pre>
-          	</li>
-          	<li>
-          		<p><a href="http://peterdowns.com/posts/first-time-with-pypi.html"> Publica</a> tu paquete en pip, para que esté disponible públicamente.</p>
-          	</li>
-          	<li><a href="https://twitter.com/pyschool"> Háznos saber</a> or haz un pull request al sitio de Pyschool en GitHub.</li>
-          </ol>
-        </section>
-
        <section class="organize">
          <h2>Organiza</h2>
 
@@ -136,18 +60,115 @@ $ git push origin</pre>
 
          <p>Pyschool es un efuerzo totalmente llevado a cabo por la comunidad y es 100% open source. Esto quiere decir que cuaquier persona puede usar material de Pyschool, u organizar un evento. Esto da un montón de flexibilidad a la hora de ser anfritrión un evento de Pyschool. La único que se espera de los anfitriones es que los eventos no sean con fines de lucro, y que el modelo de membrecía para participar en ellos sea abierto.</p>
 
-         <p>Para preguntar y contestar preguntas acerca de la autoría de contenido para Pyschool, visita nuestro grupo de discusión de <a href="https://owu.slack.com/">Pyschool</a>. No dudes en mandar un <a href="mailto:pyschool@sophilabs.com">email</a> si no encuentras la respuesta para lo que buscas.
+         <p>Para preguntar y contestar preguntas acerca de la autoría de contenido para Pyschool, visita nuestro grupo de discusión de <a href="https://owu.slack.com/messages/pyschool">Pyschool</a>. No dudes en mandar un <a href="mailto:pyschool@sophilabs.com">email</a> si no encuentras la respuesta para lo que buscas.
         </p>
+
+        <h3>Organization guidelines</h3>
+
+        <ul>
+            <li><strong>Make the event beginner friendly</strong>, if possible. Accessible even to those with no previous programming experience. Don't focus on the technicalities, try to show the fun and practical aspect of whatever technology is being used.</li>
+            <li><strong>You can use whatever tools and technologies you're most familiar with</strong>, although we do favor freely available open source tools and frameworks.</li>
+            <li>Learning something completely new can be intimidating. <strong>A smile and a friendly atmosphere</strong> can help break the ice and make those, who don't consider themselves "technical", more at ease.</li>
+            <li>It's also a good idea to <strong>plan a follow up</strong>. How can your participants keep learning? Who can they turn to if they have more questions?</li>
+       </ul>
+
+       <h3>Checklist</h3>
+
+       <ol>
+          <li><strong>A group of people willing to learn.</strong> For example, your students, coworkers, friends, or a specific group you want to help. Remember, two is a group already!</li>
+          <li><strong>One or more teachers or facilitators.</strong> The number depends on the type and size of the event. For hands-on workshops, it can be a good idea to form smaller groups that can work with their own facilitators. Code Week events are usually targeted at beginners, so teachers/facilitators don't have to be professional programmers. It's more important to have a passion for sharing knowledge, the patience to answer questions and the empathy to understand a beginner's perspective. For larger events, it might also be a good idea to have a host that makes sure everyone has what they need and keep things running smoothly.</li>
+          <li><strong>A place to be at.</strong> Classrooms, conference rooms and various public spaces can all make a great event venue with some preparation. When determining the amount of people a venue will accommodate, keep in mind that the room will get noisy and the air bad with during a hands on workshop, so don't try to stuff too many people in a windowless room because nobody enjoys coding with a headache. </li>
+          <li><strong>Computers with broadband internet connection.</strong> Depending on your target group, you might ask participants to bring their own laptops, in which case don't forget to provide enough power outlets. If you have existing computer equipment at the venue, make sure they already have the necessary software installed and provide participants with instructions on how the installation can be done on their own devices. When planning internet access, keep in mind that participants will probably also want to Google or StackOverflow things and share the event through social media on mobile devices, so make sure your WiFi can accommodate those extra devices.</li>
+          <li>And finally, <strong>something to work with/learn</strong>. Depending on your focus group, try to find topics that are age appropriate and present them in a way that's relevant to your participant's interests. Kids might enjoy making games with Scratch, teenagers making a dating app with Rails, college students using Python for data collection/analysis, adults learning the basics of HTML/CSS for a online CV or setting up their blog. You can't create programmers in a day or week, but you can show your participants how fun it can be to create something on your own. When choosing a topic, don't start with the tools you want to use, but rather focus on the outcomes you wish to achieve. Search the web for existing lesson plans, workshop programs and adjust them to your group's needs.</li>
+      </ol>
+
        </section>
 
-        <footer>
-            <nav>
-                <ul>
-                    <li><a href="https://github.com/pyschool">Contribuye</a></li>
-                    <li><a href="https://twitter.com/pyschool">@pyschool</a></li>
-                    <li><a href="https://github.com/pyschool/organization">Organiza</a></li>
-                </ul>
-            </nav>
-        </footer>
+       <section class="contribute">
+         <h2>Contribuye</h2>
+
+         <div class="contribute-logo"></div>
+
+         <p><em>“La única forma de aprender un nuevo lenguaje de programación esescribiendo programas en él.”</em></p>
+         <p>― <a href="https://wikipedia.org/wiki/Dennis_Ritchie">Dennis Ritchie</a></p>
+         <p>Pyschool could always use more stories, whether as specific python features, existing libraries, programming concepts, or even programming concepts not specific to Python itself like event handling, threading and such. New stories
+           are always welcome :)
+         </p>
+
+         <a name="user-content-get-started"></a>
+         <h3>
+           <a id="user-content-get-started" class="anchor" href="#get-started" aria-hidden="true">
+           </a>
+           ¡Comienza!
+         </h3>
+         <p>¿Estás pronto para escribir tu taller? Aquí se muestra como configurar un ambiente local de desarrollo. Todos los talleres derivan de la biblioteca <a href="https://github.com/pyschool/story">Story</a>.
+         </p>
+         <ol>
+           <li>Forkea, clona o copia los repositores de <a href="https://github.com/pyschool/hipyschool">hipyschool</a> o <a href="https://github.com/sophilabs/py101">py101</a>. Son dos buenos ejemplos de talleres para comenzar.
+           </li>
+           <li>
+             <p>Enlaza tu copia local a un <code>virtualenv</code>. Asumiendo que tienes virtualenvwrapper instalaldo, puedes inicializar tu copia local para desarrollo de la siguiente manera:
+             </p>
+             <pre>$ mkvirtualenv my_python_story
+$ cd my_python_story/
+$ python setup.py develop</pre>
+           </li>
+           <li>Crea un módulo para tu clase <em>Story</em>. Por ejemplo <code>mystory/__init__.py</code>.
+             Define los atributos <code>name</code>, <code>title</code> and <code>adventures</code>.
+             Deberás usar la función <code>gettext()</code> del módulo <code>story.translation</code> para recibir traducciones. Más abajo se tratará con detenimiento.
+           </li>
+           <li>
+             Crea una o más <em>Aventuras</em>. Un taller es una colección de una o más aventuras
+             <ol>
+               <li>Crea un módulo con tu aventura. Por ejemplo <code>mystory/myfirstadventure</code></li>
+               <li>Crea el archivo <code>README.rst</code> conteniendo tu aventura</li>
+               <li>Haz una traducción a español. Debes de llamarla <code>README.es.rst</code></li>
+               <li>Define una clase llamada <code>Adventure</code> e
+               </li>
+             </ol>
+           </li>
+           <li>
+             <p>Debido a que la función <code>gettext()</code> depende de  <a href="http://babel.pocoo.org/en/latest/">PyBabel</a>, por lo tanto debes inicializar las traducciones ejecutando:
+             </p>
+             <pre>$ make msg-init
+$ make msg-extract</pre>
+             <p>Deberías ver varios archivos en la carpeta <code>mystory/locale/</code>, correspondientes a los usos de la función <code>gettext()</code>
+               Si el comando falla, intenta nuevamente.
+             </p>
+           </li>
+           <li>
+             <p>(Opcional) Modifica y agrega traducciones in los archivos de la carpeta <code>locale</code>, y luego ejecuta.</p>
+             <pre>$ make msg</pre>
+           </li>
+           <li>
+             <p>Es recomendado crear algunos test unitarios para verificar tus soluciones, verifica que tus cambios pasen flak8, tox, así como los tests unitarios:
+             </p>
+             <pre>$ flake8 my_python_story tests
+$ python setup.py test or py.test
+$ tox</pre>
+             <p>Para obtener flake8 y tox, solo corre <code>pip install </code> en tu virtualenv.</p>
+           </li>
+           <li>
+             <p>Comitea tus cambios y haz un push de tu branch a GitHub:</p>
+             <pre>$ git add .
+$ git commit -m "Your detailed description of your changes."
+$ git push origin</pre>
+           </li>
+           <li>
+             <p><a href="http://peterdowns.com/posts/first-time-with-pypi.html"> Publica</a> tu paquete en pip, para que esté disponible públicamente.</p>
+           </li>
+           <li><a href="https://twitter.com/pyschool"> Háznos saber</a> or haz un pull request al sitio de Pyschool en GitHub.</li>
+         </ol>
+       </section>
+
+      <footer>
+          <nav>
+              <ul>
+                  <li><a href="https://github.com/pyschool">Contribuye</a></li>
+                  <li><a href="https://twitter.com/pyschool">@pyschool</a></li>
+                  <li><a href="https://github.com/pyschool/organization">Organiza</a></li>
+              </ul>
+          </nav>
+      </footer>
     </body>
 </html>
