Add some Try section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,45 @@
                     <p>Workshop for learning regular expressions using the commandline.</p>
                 </li>
             </ul>
-        </section>
+       </section>
+
+       <section class="try">
+         <h2>Try a story</h2>
+
+         <p>Ready to try one story. Here is how to get started!</p>
+
+         <ol>
+           <li>
+              <h3>Download</h3>
+              <p>Head to the Python website and <a href="https://www.python.org/downloads/">download</a> Python 3 for your operating system</p>
+           </li>
+
+           <li>
+              <h3>Install</h3>
+              <p>Go to terminal and install the pip package corresponding to the workshop you want to try</p>
+
+              <div class="terminal">
+                <div class="terminal-header"></div>
+                <code class="terminal-shell">
+                  <span class="terminal-path"></span><span class="terminal-prompt"></span>pip install <em>py101</em></p>
+                </code>
+              </div>
+           </li>
+
+           <li>
+              <h3>Run</h3>
+
+              <p>Run the command directly</p>
+
+              <div class="terminal">
+                <div class="terminal-header"></div>
+                <code class="terminal-shell">
+                  <span class="terminal-path"></span><span class="terminal-prompt"></span>py101</p>
+                </code>
+              </div>
+           </li>
+         </ol>
+       </section>
 
        <section class="organize">
          <h2>Organize</h2>
