--- a/index.html
+++ b/index.html
@@ -1,212 +1,1 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>PySchool</title>
-        <meta name="description" content="PySchool">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="stylesheet" href="css/index.css">
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
-
-        <script src="js/vendor/modernizr.js"></script>
-    </head>
-    <body>
-        <header>
-            <nav>
-                <ul>
-                    <li><a href="index.html">[English]</a></li>
-                    <li><a href="index.es.html">Spanish</a></li>
-                </ul>
-            </nav>
-            <div class="logo"></div>
-            <h1>PySchool</h1>
-            <p>Stories to learn Python stuff.</p>
-            <small>
-              Inspired by <a href="https://nodeschool.io/">NodeSchool</a>
-            </small>
-        </header>
-        <section class="workshops">
-            <ul>
-                <li>
-                    <a href="https://github.com/pyschool/hipyschool">Hi Pyschool</a>
-                    <code>pip install hipyschool</code>
-                    <p>Sample story (fork or copy to create your own story).</p>
-                </li>
-                <li>
-                    <a href="https://github.com/sophilabs/py101">Python 101</a>
-                    <code>pip install py1010</code>
-                    <p>A Pyschool story for learning python essentials.</p>
-                </li>
-                <li>
-                    <a href="https://github.com/sophilabs/learnregex">Learn Regex</a>
-                    <code>pip install learnregex</code>
-                    <p>Workshop for learning regular expressions using the commandline.</p>
-                </li>
-            </ul>
-       </section>
-
-       <section class="try">
-         <h2>Try it</h2>
-
-         <div class="try-logo"></div>
-
-         <p>Ready to try one story. Here is how to get started!</p>
-
-         <ol>
-           <li>
-              <h3>Download</h3>
-              <p>Head to the Python website and <a href="https://www.python.org/downloads/">download</a> Python 3 for your operating system</p>
-           </li>
-
-           <li>
-              <h3>Install</h3>
-              <p>Go to terminal and install the pip package corresponding to the workshop you want to try</p>
-
-              <div class="terminal">
-                <div class="terminal-header"></div>
-                <code class="terminal-shell">
-                  <span class="terminal-path"></span><span class="terminal-prompt"></span>pip install <em>py101</em></p>
-                </code>
-              </div>
-           </li>
-
-           <li>
-              <h3>Run</h3>
-
-              <p>Run the command directly</p>
-
-              <div class="terminal">
-                <div class="terminal-header"></div>
-                <code class="terminal-shell">
-                  <span class="terminal-path"></span><span class="terminal-prompt"></span>py101</p>
-                </code>
-              </div>
-           </li>
-         </ol>
-       </section>
-
-       <section class="organize">
-         <h2>Organize</h2>
-
-         <div class="organize-logo"></div>
-
-         <p><em>“Education is for improving the lives of others and for leaving your community and world better than you found it”</em></p>
-         <p>― <a href="https://wikipedia.org/wiki/Marian_Wright_Edelman">Marian Wright Edelman</a></p>
-
-         <p>PySchool is a fully community driven effort and is 100% open source. This means that anyone can use the PySchool materials and/or host an event. There's a lot of flexibility in the specifics of running a PySchool event. The only expectations for event hosts is that events be not-for-profit (free or low cost) and that governance of events should have an open membership model.</p>
-
-         <p>To ask and answer questions about authoring Pyschool content, check out our <a href="https://owu.slack.com/messages/pyschool">Pyschool</a> discussion group. Don't hesitate to send us an <a href="mailto:pyschool@sophilabs.com">email</a> if you can't find the answer you're looking for.
-        </p>
-
-        <h3>Organization guidelines</h3>
-
-        <ul>
-            <li><strong>Make the event beginner friendly</strong>, if possible. Accessible even to those with no previous programming experience. Don't focus on the technicalities, try to show the fun and practical aspect of whatever technology is being used.</li>
-            <li><strong>You can use whatever tools and technologies you're most familiar with</strong>, although we do favor freely available open source tools and frameworks.</li>
-            <li>Learning something completely new can be intimidating. <strong>A smile and a friendly atmosphere</strong> can help break the ice and make those, who don't consider themselves "technical", more at ease.</li>
-            <li>It's also a good idea to <strong>plan a follow up</strong>. How can your participants keep learning? Who can they turn to if they have more questions?</li>
-       </ul>
-
-       <h3>Checklist</h3>
-
-       <ol>
-          <li><strong>A group of people willing to learn.</strong> For example, your students, coworkers, friends, or a specific group you want to help. Remember, two is a group already!</li>
-          <li><strong>One or more teachers or facilitators.</strong> The number depends on the type and size of the event. For hands-on workshops, it can be a good idea to form smaller groups that can work with their own facilitators. Code Week events are usually targeted at beginners, so teachers/facilitators don't have to be professional programmers. It's more important to have a passion for sharing knowledge, the patience to answer questions and the empathy to understand a beginner's perspective. For larger events, it might also be a good idea to have a host that makes sure everyone has what they need and keep things running smoothly.</li>
-          <li><strong>A place to be at.</strong> Classrooms, conference rooms and various public spaces can all make a great event venue with some preparation. When determining the amount of people a venue will accommodate, keep in mind that the room will get noisy and the air bad with during a hands on workshop, so don't try to stuff too many people in a windowless room because nobody enjoys coding with a headache. </li>
-          <li><strong>Computers with broadband internet connection.</strong> Depending on your target group, you might ask participants to bring their own laptops, in which case don't forget to provide enough power outlets. If you have existing computer equipment at the venue, make sure they already have the necessary software installed and provide participants with instructions on how the installation can be done on their own devices. When planning internet access, keep in mind that participants will probably also want to Google or StackOverflow things and share the event through social media on mobile devices, so make sure your WiFi can accommodate those extra devices.</li>
-          <li>And finally, <strong>something to work with/learn</strong>. Depending on your focus group, try to find topics that are age appropriate and present them in a way that's relevant to your participant's interests. Kids might enjoy making games with Scratch, teenagers making a dating app with Rails, college students using Python for data collection/analysis, adults learning the basics of HTML/CSS for a online CV or setting up their blog. You can't create programmers in a day or week, but you can show your participants how fun it can be to create something on your own. When choosing a topic, don't start with the tools you want to use, but rather focus on the outcomes you wish to achieve. Search the web for existing lesson plans, workshop programs and adjust them to your group's needs.</li>
-      </ol>
-
-       </section>
-
-       <section class="contribute">
-         <h2>Contribute</h2>
-
-         <div class="contribute-logo"></div>
-
-         <p><em>“The only way to learn a new programming language is by writing programs in it.”</em></p>
-         <p>― <a href="https://wikipedia.org/wiki/Dennis_Ritchie">Dennis Ritchie</a></p>
-         <p>Pyschool could always use more stories, whether as specific python features, existing libraries, programming concepts, or even programming concepts not specific to Python itself like event handling, threading and such. New stories
-           are always welcome :)
-         </p>
-
-         <a name="user-content-get-started"></a>
-         <h3>
-           <a id="user-content-get-started" class="anchor" href="#get-started" aria-hidden="true">
-           </a>
-           Get Started!
-         </h3>
-         <p>Ready to write your story? Here's how to set up a story for local development. All stories derive from the base <a href="https://github.com/pyschool/story">Story</a> library.
-         </p>
-         <ol>
-           <li>Fork/clone/copy the <a href="https://github.com/pyschool/hipyschool">hipyschool</a> or the <a href="https://github.com/sophilabs/py101">py101</a> repo on Github. Those a good examples of simple stories to begin with.
-           </li>
-           <li>
-             <p>Install your local copy into a virtualenv. Assuming you have virtualenvwrapper installed, this is how you could set up your copy for local development:
-             </p>
-             <pre>$ mkvirtualenv my_python_story
-$ cd my_python_story/
-$ python setup.py develop</pre>
-           </li>
-           <li>Create a module for your <em>Story</em>. For example <code>mystory/__init__.py</code>.
-             Define the <code>name</code>, <code>title</code> and <code>adventures</code> variables.
-             You will have to use the <code>gettext()</code> function from <code>story.translation</code> to receive translations. More on that below.
-           </li>
-           <li>
-             Create one or more <em>Adventures</em>. A story is a collection of one or more adventures
-             <ol>
-               <li>Create a module for your adventure for example <code>mystory/myfirstadventure</code></li>
-               <li>Create the <code>README.rst</code> file describing your adventure in the previous folder</li>
-               <li>(Optional) Make an Spanish translation. You must name it <code>README.es.rst</code></li>
-               <li>In the <code>__init__.py</code> file define a class called <code>Adventure</code>, that derives from <a href="https://github.com/pyschool/story/blob/master/story/adventures.py">BaseAdventure</a>.
-               </li>
-             </ol>
-           </li>
-           <li>
-             <p>Since the <code>gettext()</code> function relies on <a href="http://babel.pocoo.org/en/latest/">PyBabel</a>, so you will have to initialize the translation by running:
-             </p>
-             <pre>$ make msg-init
-$ make msg-extract</pre>
-             <p>You should see several files for each language in <code>mystory/locale/</code> corresponding for the usages of the <code>gettext()</code> function.
-               If the command fail, try again.
-             </p>
-           </li>
-           <li>
-             <p>(Optional) Modify and add translations in the locale files and then run:</p>
-             <pre>$ make msg</pre>
-           </li>
-           <li>
-             <p>It is recommended to create some unit tests for checking your solutions, check that your changes pass flake8, tox, and the unit tests:
-             </p>
-             <pre>$ flake8 my_python_story tests
-$ python setup.py test or py.test
-$ tox</pre>
-             <p>To get flake8 and tox, just pip install them into your virtualenv.</p>
-           </li>
-           <li>
-             <p>Commit your changes and push your branch to GitHub:</p>
-             <pre>$ git add .
-$ git commit -m "Your detailed description of your changes."
-$ git push origin</pre>
-           </li>
-           <li>
-             <p><a href="http://peterdowns.com/posts/first-time-with-pypi.html"> Publish</a> your package in pip, so it is available publicly </p>
-           </li>
-           <li><a href="https://twitter.com/pyschool"> Let us know</a> or submit a pull request to the Pyschool GitHub website to update our website to include your story.</li>
-         </ol>
-       </section>
-
-      <footer>
-          <nav>
-              <ul>
-                  <li><a href="https://github.com/pyschool">Contribute</a></li>
-                  <li><a href="https://twitter.com/pyschool">@pyschool</a></li>
-                  <li><a href="https://github.com/pyschool/organization">Organize</a></li>
-              </ul>
-          </nav>
-      </footer>
-    </body>
-</html>
+index.en.html
