--- a/index.es.html
+++ b/index.es.html
@@ -10,6 +10,8 @@
         <meta name='apple-mobile-web-app-capable' content='yes'>
 
         
+<title>PySchool</title>
+<meta name="description" content="PySchool, stories to learn Python stuff.">
 
 
         
