--- a/index.es.html
+++ b/index.es.html
@@ -31,7 +31,6 @@
     <li><a href="#try-it">Try it</a></li>
     <li><a href="#organize">Organize</a></li>
     <li><a href="#contribute">Contribute</a></li>
-    <li><a href="#attribution">Attribution</a></li>
 
                 </ul>
                 <ul>
@@ -223,6 +222,16 @@ git push origin</code></pre>
             </nav>
         </footer>
 
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-99641972-1', 'auto');
+          ga('send', 'pageview');
+
+        </script>
         
         
     </body>
